--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -6,4 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".add.AddActivity">
 
+    <TextView
+        android:id="@+id/addMemberNameTitle"
+        android:layout_width="match_parent"
+        android:layout_height="22dp"
+        android:text="@string/add_textview_name_title"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <EditText
+        android:id="@+id/addMemberName"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text=""
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/addMemberNameTitle"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
