--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -28,4 +28,37 @@
         android:paddingEnd="10dp"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/addMemberNameTitle"/>
+
+    <TextView
+        android:id="@+id/addMemberAgeTitle"
+        android:layout_width="match_parent"
+        android:layout_height="22dp"
+        android:text="@string/add_textview_age_title"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/addMemberName"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <EditText
+        android:id="@+id/addMemberAge"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text=""
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/addMemberAgeTitle"/>
+
+    <Button
+        android:id="@+id/add_btn"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="@string/menu_add_btn"
+        android:layout_marginTop="20dp"
+        android:background="@color/primary"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/addMemberAge"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
