--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -72,10 +72,10 @@
         app:layout_constraintTop_toBottomOf="@+id/addMemberGenderTitle" />
 
     <Button
-        android:id="@+id/add_btn"
+        android:id="@+id/send_btn"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:text="@string/menu_add_btn"
+        android:text="@string/btn_send"
         android:layout_marginTop="20dp"
         android:background="@color/primary"
         android:textColor="@color/white"
