--- a/app/src/main/res/layout/adapter_member.xml
+++ b/app/src/main/res/layout/adapter_member.xml
@@ -8,12 +8,13 @@
 
     <TextView
         android:id="@+id/member_name"
-        android:layout_width="120dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:text="Alan"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/member_age" />
 
     <TextView
         android:id="@+id/member_age"
@@ -21,26 +22,20 @@
         android:layout_height="wrap_content"
         tools:text="100"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/member_name" />
+        app:layout_constraintEnd_toStartOf="@id/member_sex" />
 
     <TextView
         android:id="@+id/member_sex"
-        android:layout_width="70dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         tools:text="female"
         android:paddingLeft="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/member_age" />
-
-    <Button
-        android:id="@+id/delete_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete"
+        android:paddingRight="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
